# gaya_dq

./: .gitignore  README.md  cli.py  pyproject.toml
gaya/: runner.py
gaya/adapters/: postgres.py
gaya/baseline/: store.py
gaya/checks/: base.py  completeness.py  schema.py  uniqueness.py  volume.py
gaya/config/: loader.py
gaya/output/: reporter.py
mnt/user-data/outputs/gaya/gaya/adapters/: base.py
tests/: fixtures.py  test_baseline.py  test_completeness.py  test_runner.py  test_schema.py  test_uniqueness.py  test_volume.py
